# dbt_mini_mart

./: .gitignore  .user.yml  README.md  blog_post.md  blog_post_en.md  dagster_dbt_ops_guide_en.md  dagster_dbt_운영_가이드.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  streamlit_app.py
.tmp_dagster_home_22mzs203/history/: runs.db
.tmp_dagster_home_22mzs203/history/runs/: .db  index.db
.tmp_dagster_home_22mzs203/schedules/: schedules.db
dagster_mini_mart/: alert_routing.json  alerts.py  assets.py  definitions.py  dlt_assets.py  jobs.py  project.py
data/raw/: olist_customers.csv  olist_order_items.csv  olist_order_payments.csv  olist_order_reviews.csv  olist_orders.csv  olist_products.csv  olist_sellers.csv  product_category_name_translation.csv
docs/: dlt_dagster_troubleshooting.md
macros/: date_range.sql  generate_order_line_id.sql
models/: docs.md
models/gold/: dim_customer.sql  dim_date.sql  dim_payment_type.sql  dim_product.sql  dim_seller.sql  fct_daily_sales.sql  fct_orders.sql  gold_schema.yml
models/raw/: raw_sources.yml
models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_reviews.sql  stg_schema.yml  stg_sellers.sql
scripts/: generate_raw_csv.py  generate_seeds.py  load_raw_dlt.py  load_raw_to_duckdb.py
tests/: assert_daily_line_count_matches.sql  assert_daily_sales_reconciles.sql  assert_orders_within_date_range.sql
