[project]
name = "dbt-mini-mart"
version = "0.1.0"
description = "Layered dbt mini mart project with DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dagster>=1.12.20",
  "dagster-dbt>=0.28.20",
  "dagster-webserver>=1.12.20",
  "dbt-duckdb>=1.8,<2.0",
  "dlt[duckdb]>=1.24.0",
  "duckdb>=1.0,<2.0",
  "plotly>=6.6.0",
  "streamlit>=1.55.0",
]

[tool.dagster]
module_name = "dagster_mini_mart.definitions"
